Remove extra margin at top of documentation sidebar. Style 'Additional Support' correctly instead of using <h1>.

--- a/frontend/public/components/cluster-settings/_cluster-settings.scss
+++ b/frontend/public/components/cluster-settings/_cluster-settings.scss
@@ -42,7 +42,7 @@
 .co-p-cluster__doc-title {
   font-weight: 600;
   font-size: 14px;
-  margin-top: 30px;
+  margin-top: 12px;
   text-transform: none;
 }
 
